--- a/style6.css
+++ b/style6.css
@@ -41,7 +41,7 @@ button{
 #float-circle{
   width: 100px;
   height: 100px;
-  background: #fd4d3f;
+  background: #f4f4eb;
   border-radius: 100px;
   bottom: 50px;
   left: 50%;
