--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ body {
   box-shadow: 0 0 5px 1px;
   padding: 20px;
 }
+
+.container2 {
+  width: 750px;
+  max-width: 75%;
+  text-align: center;
+  background-color: #ffffff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 1px;
+  padding: 20px;
+}
+
 .footer {
   width: 750px;
   max-width: 75%;
