--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   background-color: #7236ff;
   display: flex;
   align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container {
