--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   box-shadow: 0 0 5px 1px;
   padding: 20px;
   margin: 20px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container2 {
@@ -30,7 +32,9 @@ body {
   border-radius: 5px;
   box-shadow: 0 0 5px 1px;
   padding: 20px;
-  margin: 20px
+  margin: 20px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .footer {
