--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   box-shadow: 0 0 5px 1px;
   padding: 20px;
   margin: 20px;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -33,6 +34,7 @@ body {
   box-shadow: 0 0 5px 1px;
   padding: 20px;
   margin: 20px;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
@@ -41,10 +43,13 @@ body {
   width: 750px;
   max-width: 75%;
   text-align: center;
-  background-color: #7e0a0a;
+  background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 0 0 5px 1px;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .button {
