--- a/style.css
+++ b/style.css
@@ -21,8 +21,9 @@ body {
   padding: 20px;
   margin: 20px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  height: 400px;
+  align-content: space-between;
 }
 
 .container2 {
@@ -34,9 +35,6 @@ body {
   box-shadow: 0 0 5px 1px;
   padding: 20px;
   margin: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .footer {
