--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@ body {
   padding: 20px;
   margin: 20px;
   display: flex;
-  flex-wrap: wrap;
-  height: 400px;
-  align-content: space-between;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container2 {
@@ -45,6 +44,7 @@ body {
   border-radius: 5px;
   box-shadow: 0 0 5px 1px;
   padding: 20px;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
