--- a/style.css
+++ b/style.css
@@ -44,23 +44,16 @@ body {
   margin: 20px;
 }
 
+
 .button {
   background-color: #4400ff;
   color: #ffffff;
   border-radius: 4px;
   padding: 10px 40px;
+  margin: 15px 0px;
   font-size: 1.75rem;
   border: 5px solid #4400ff;
-        display: flex;
-        flex-wrap: wrap;
-        margin:-10px;
-}      
-      .button>* {
-        flex: 1 1 160px;
-        margin: 10px;
-      }
-
-
+}
 
 .button:hover {
   border: 5px solid black;
