--- a/style.css
+++ b/style.css
@@ -1,64 +1,82 @@
 body {
-  padding: 0;
-  margin: 10;
-  width: 100vw;
-  height: 100vh;
-  font-family: "Syne Mono", monospace;
-  background-color: #7236ff;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    padding: 0;
+    margin: 10px;
+    width: 100vw;
+    height: 100vh;
+    font-family: "Syne Mono", monospace;
+    background-color: #7236ff;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
-
 .container {
-  width: 750px;
-  max-width: 75%;
-  text-align: center;
-  background-color: #ffffff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px 1px;
-  padding: 20px;
-  margin: 20px;
+    width: 750px;
+    max-width: 75%;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px;
+    padding: 20px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
 }
-
+.button-container {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+button, span {
+    display: inline-block;
+}
+.button-container > a {
+    margin: 20px;
+}
 .container2 {
-  width: 750px;
-  max-width: 75%;
-  text-align: center;
-  background-color: #ffffff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px 1px;
-  padding: 20px;
-  margin: 20px;
+    width: 750px;
+    max-width: 75%;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px;
+    padding: 20px;
+    margin: 20px;
 }
-
 .footer {
-  width: 750px;
-  max-width: 75%;
-  text-align: center;
-  background-color: #ffffff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px 1px;
-  padding: 20px;
-  margin: 20px;
+    width: 750px;
+    max-width: 75%;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px;
+    padding: 20px;
+    margin: 20px;
 }
-
-
+.button-test {
+    background-color: #4400ff;
+    color: #ffffff;
+    border-radius: 4px;
+    padding: 10px 40px;
+    margin: 15px 0px;
+    font-family: "Syne Mono", monospace;
+    font-size: 1.75rem;
+    border: 5px solid #4400ff;
+}
 .button {
-  background-color: #4400ff;
-  color: #ffffff;
-  border-radius: 4px;
-  padding: 10px 40px;
-  margin: 15px 0px;
-  font-size: 1.75rem;
-  border: 5px solid #4400ff;
+    background-color: #4400ff;
+    color: #ffffff;
+    border-radius: 4px;
+    padding: 10px 40px;
+    margin: 15px 0px;
+    font-size: 1.75rem;
+    border: 5px solid #4400ff;
 }
-
 .button:hover {
-  border: 5px solid black;
-  cursor: pointer;
+    border: 5px solid black;
+    cursor: pointer;
 }
-
 .button:active {
-  border: 5px solid #ffd300;
+    border: 5px solid #ffd300;
 }
