--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
+    overflow-x:hidden;
 }
 .container {
     width: 750px;
