--- a/style7.css
+++ b/style7.css
@@ -1,27 +1,45 @@
-.grid {
+.container {
   display: grid;
-  border: 2px blue solid;
-  height: 500px;
-  width:500px;
-  grid-template: repeat(4, 1fr 2fr) / repeat(4, 3fr 2fr);
-  gap: 5px;
+  max-width: 900px;
+  position: relative;
+  margin: auto;
+  gap: 10px;
+  grid-template: repeat(12, 1fr) / repeat(6, 1fr);
 }
 
-.a {
-  grid-area: 5/1/span 2/span 2;
+h1, h2, h3 {
+  font-family: monospace;
+  text-align: center;
 }
 
-.b {  
-  grid-area: 2/2/span 3/span 6;
+header {
+  background-color: dodgerblue;
+  grid-area: 1 / 1 / 3 / 7;
 }
 
-.c {
-  grid-area: 6/8/span 3/span 1;
-}
-
-.box {
+nav {
   background-color: beige;
-  color: black;
-  border-radius: 5px;
-  border: 2px dodgerblue solid;
+  grid-area: 3 / 1 / 4 / 7;
+}
+
+.left {
+  background-color: dodgerblue;
+  grid-area: 4 / 1 / 9 / 5;
+}
+
+.right {
+  background-color: beige;  
+  grid-area: 4 / 5 / 9 / 7;
+}
+
+.overlap {
+  background-color: lightcoral;
+  grid-area: 6 / 4 / 8 / 6;
+  z-index: 5;
+}
+
+footer {
+  background-color: dodgerblue;
+  grid-area: 9 / 1 / 13 / 7;
+  z-index: 5;
 }
