--- a/style.css
+++ b/style.css
@@ -22,9 +22,40 @@ body {
     display: flex;
     flex-direction: column;
 }
-.button-container > a span,
-button {
+.button-container {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+button, span {
     display: inline-block;
+}
+.button-container > a {
+    margin: 20px;
+}
+.container2 {
+    width: 750px;
+    max-width: 75%;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px;
+    padding: 20px;
+    margin: 20px;
+}
+.footer {
+    width: 750px;
+    max-width: 75%;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 1px;
+    padding: 20px;
+    margin: 20px;
+}
+.button-test {
     background-color: #4400ff;
     color: #ffffff;
     border-radius: 4px;
@@ -33,18 +64,20 @@ button {
     font-family: "Syne Mono", monospace;
     font-size: 1.75rem;
     border: 5px solid #4400ff;
-    text-align: center;
-    text-decoration: none;
-    line-height: normal; /* Ensures alignment */
 }
-
-.button-container > a span:hover,
-button:hover {
+.button {
+    background-color: #4400ff;
+    color: #ffffff;
+    border-radius: 4px;
+    padding: 10px 40px;
+    margin: 15px 0px;
+    font-size: 1.75rem;
+    border: 5px solid #4400ff;
+}
+.button:hover {
     border: 5px solid black;
     cursor: pointer;
 }
-
-.button-container > a span:active,
-button:active {
+.button:active {
     border: 5px solid #ffd300;
 }
